--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,3 +1,7 @@
-@import "navbar";
 @import "homepage";
+@import "navbar";
 @import "user";
+@import "signup";
+@import "editpost";
+@import "specificblog";
+@import "newpost";
