--- a/public/css/_homepage.scss
+++ b/public/css/_homepage.scss
@@ -1,4 +1,4 @@
-#body {
+.main-container {
 	background-color: #D1CFC9;
 	margin: 0;
 	padding: 0;
@@ -6,7 +6,7 @@
 
 #home-header{
 	margin: 90px auto;
-	border: 2px solid;
+	// border: 2px solid;
 	width: 50%;
 	font-size: 4.5em;
 	text-align: center;
@@ -14,17 +14,17 @@
 }
 
 #title-box {
-	width: 65%;
+	width: 85%;
 	margin: 0px auto;
-	border: 2px solid;
+	// border: 2px solid;
 	text-decoration: none;
 }
 
 #post-title {
 	width: 50%;
 	margin: 10px auto;
-	border: 1px solid;
-	font-size: 4em;
+	// border: 1px solid;
+	font-size: 2.5em;
 	text-align: center;
 	text-decoration: none;
 }
@@ -32,21 +32,30 @@
 #content-box {
 	width: 65%;
 	margin: 10px auto;
-	border: 2px solid;
+	// border: 2px solid;
 }
 
 #post-content {
 	width: 95%;
 	margin: 10px auto;
-	border: 1px solid;
-	font-size: 1.5em;
+	// border: 1px solid;
+	font-size: 1.2em;
+}
+
+#post-author {
+		width: 50%;
+	margin: 10px auto;
+	// border: 1px solid;
+	font-size: 1.2em;
+	text-align: center;
+	text-decoration: none;
 }
 
 #post-container {
 	border: 1px solid;
 	margin: 70px auto;
-	width: 75%;
-	background-color: white; 
+	width: 55%;
+	background-color: #F6F3F1; 
 	border-radius: 10px;
 }
 
