--- a/public/css/_navbar.scss
+++ b/public/css/_navbar.scss
@@ -10,30 +10,38 @@
 }
 
 .left-side ul li{
-	border: 2px solid;
+	// border: 2px solid;
+	margin: 10px;
 	text-decoration: none;
 	display: block;
 	float: left;
+	background-color: #EAE2DE;
 	// margin: 20px auto;
 }
 
 .left-side ul li a{
 	float: left;
-	border: 2px solid;
+	// border: 2px solid;
 	margin: 22px;
+	text-decoration: none;
+	background-color: #EAE2DE;
 }
 
 .right-side ul li{
-	border: 2px solid;
+	// border: 2px solid;
+	margin: 10px;
 	text-decoration: none;
 	display: block;
 	float: right;
+	background-color: #EAE2DE;
 }
 
 .right-side ul li a{
-	border: 2px solid;
+	// border: 2px solid;
+	text-decoration: none;
 	float: right;
 	margin: 22px;
+	background-color: #EAE2DE;
 }
 
 .title {
