--- a/views/loginpage.erb
+++ b/views/loginpage.erb
@@ -1,25 +1,33 @@
-<h6>Create new user</h6>
-
-<div class='signing-form'>
-	<div class='signup'>
-		<h6>Create new user</h6>
-		<form method='post' action='/signup'>
-			<input type="text" name="fname" placeholder="First Name">
-			<input type="text" name="lname" placeholder="Last Name">
-			<input type="text" name="username" placeholder="Username">
-			<input type="text" name="password" placeholder="Password">
-			<input type="text" name="email" placeholder="Email">
-			<input type="submit">
-		</form>
-	</div>
-
-
+<div id='signup-box'>
 	<div class='login'>
-		<h6>Already a user?</h6>
+		<h6 id='login-head'>Already a user?</h6>
+		<h6 id='login-sub'>Sign in!</h6>
+
 			<form method='post' action='/login'>
-				<input type="text" name="username">
-				<input type="text" name="password">
-				<input type="submit">
+				<div id='login-field-box'>
+					<input type="text" name="username" placeholder="Username" id='login-username'>
+					<input type="text" name="password" placeholder='Password' id='login-password'>
+					<input type="submit" value="Log In" id='login-submit'>
+				</div>
 			</form>
 	</div>
+</div>
+
+
+<div class='signup-box'>
+		<div id='signup-box'>
+			<h3 id='login-head'>Create new user</h3>
+		
+		<form method='post' action='/signup'>
+			<input type="text" name="fname" placeholder="First Name" id='login-username'>
+			<input type="text" name="lname" placeholder="Last Name" id='login-username'>
+			<input type="text" name="username" placeholder="Username" id='login-username'>
+			<input type="text" name="password" placeholder="Password" id='login-username'>
+			<input type="text" name="email" placeholder="Email" id='login-username'>
+			<input type="submit" id='login-submit'>
+		</form>
+		</div>
+	</div>
+
+
 </div>
