--- a/views/specificblog.erb
+++ b/views/specificblog.erb
@@ -1,8 +1,9 @@
-<h3>Individual Blog:</h3>
+
 
 <div id='post-container'>
 <div id='title-box'>
-<div id='post-title'><%= @blog.title %></a></div></div>
+<div id='post-title'><%= @blog.title%></a>
+		</div></div>
 <hr id='line-break'>
 <div id='content-box'>
 <div id='post-content'><%= @blog.content %></div></div>
@@ -10,13 +11,20 @@
 
 
 
-<% if session[:user_id] == @blog.user_id %>
-<a href='/blogs/<%=@blog.id %>/edit'><input type='submit' value='update'></a>
 
-<form method='post' action='/destroy/<%= @blog.id %>'>
-	<input type='submit' value='delete Blog'>
-</form>
 
-<% end %>
+<hr id='line-break'>
+
+
+
+<div id='update-container'>
+		<a href='/blogs/<%=@blog.id %>/edit'><input type='submit' value='Update this post' id='update-button'></a>
+
+	<form method='post' action='/destroy/<%= @blog.id %>'>
+		<input type='submit' value='Delete this post' id='delete-button'>
+	</form>
+	</div>
+
+
 
 
