Im hungry and im gonna go eat

--- a/public/css/_editpost.scss
+++ b/public/css/_editpost.scss
@@ -74,7 +74,7 @@
 	width: 20%;
 	height: 30px;
 	background-color: #F6F3F1;
-	border: 2px solid;
+	// border: 2px solid;
 	text-align: center;
 	display: block;
 	background-color: rgba(77,136,255,0.9);
