--- a/views/loginpage.erb
+++ b/views/loginpage.erb
@@ -5,8 +5,8 @@
 
 			<form method='post' action='/login'>
 				<div id='login-field-box'>
-					<input type="text" name="username" placeholder="Username" id='login-username'>
-					<input type="text" name="password" placeholder='Password' id='login-password'>
+					<input type="text" name="username" placeholder="Username" id='login-username' >
+					<input type="text" name="password" placeholder='Password' id='login-password' autocomplete="off">
 					<input type="submit" value="Log In" id='login-submit'>
 				</div>
 			</form>
@@ -19,11 +19,11 @@
 			<h3 id='login-head'>Create new user</h3>
 		
 		<form method='post' action='/signup'>
-			<input type="text" name="fname" placeholder="First Name" id='login-username'>
-			<input type="text" name="lname" placeholder="Last Name" id='login-username'>
-			<input type="text" name="username" placeholder="Username" id='login-username'>
-			<input type="text" name="password" placeholder="Password" id='login-username'>
-			<input type="text" name="email" placeholder="Email" id='login-username'>
+			<input type="text" name="fname" placeholder="First Name" id='login-username' autocomplete="off">
+			<input type="text" name="lname" placeholder="Last Name" id='login-username' autocomplete="off">
+			<input type="text" name="username" placeholder="Username" id='login-username' autocomplete="off">
+			<input type="text" name="password" placeholder="Password" id='login-username' autocomplete="off">
+			<input type="text" name="email" placeholder="Email" id='login-username' autocomplete="off">
 			<input type="submit" id='login-submit'>
 		</form>
 		</div>
