--- a/public/css/_homepage.scss
+++ b/public/css/_homepage.scss
@@ -5,7 +5,7 @@
 }
 
 #home-header{
-	margin: 90px auto;
+	margin: 10px auto;
 	// border: 2px solid;
 	width: 50%;
 	font-size: 4.5em;
@@ -14,19 +14,28 @@
 }
 
 #title-box {
-	width: 85%;
+	width: 100%;
 	margin: 0px auto;
 	// border: 2px solid;
 	text-decoration: none;
 }
 
 #post-title {
-	width: 50%;
+	width: 70%;
 	margin: 10px auto;
 	// border: 1px solid;
-	font-size: 2.5em;
+	font-size: 2.2em;
 	text-align: center;
 	text-decoration: none;
+}
+
+#post-title a{
+	text-decoration: none;
+}
+
+#post-author {
+	// border: 1px solid;
+	margin: 0 auto;
 }
 
 #content-box {
@@ -55,6 +64,7 @@
 	border: 1px solid;
 	margin: 70px auto;
 	width: 55%;
+	box-shadow: 3px 3px 3px rgba(77,136,255,0.9);
 	background-color: #F6F3F1; 
 	border-radius: 10px;
 }
