--- a/public/css/_navbar.scss
+++ b/public/css/_navbar.scss
@@ -11,6 +11,8 @@
 
 .left-side ul li{
 	// border: 2px solid;
+	border-radius: 10%;
+	box-shadow: 2px 2px 2px;
 	margin: 10px;
 	text-decoration: none;
 	display: block;
@@ -29,6 +31,8 @@
 
 .right-side ul li{
 	// border: 2px solid;
+	border-radius: 10%;
+	box-shadow: 2px 2px 2px;
 	margin: 10px;
 	text-decoration: none;
 	display: block;
@@ -52,4 +56,9 @@
 	margin: 20px auto;
 	color: white;
 	text-align: center;
+}
+
+#logout-button {
+	background-color: #EAE2DE;
+	font-size: 0.6em;
 }
