--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -9,7 +9,7 @@
 <div id='post-container'>
 <div id='title-box'>
 <div id='post-title'><a href="/blogs/<%=b.id %>"><%= b.title%></a></div></div>
-
+<div id='post-author'>Posted by: <a href='/users/<%= b.user.id %>'> <%= b.user.username %></a></div>
 <hr id='line-break'>
 <div id='content-box'>
 <div id='post-content'><%= b.content %></div></div>
@@ -17,6 +17,4 @@
 
 
 <% end %>
-
-
 
