--- a/views/newpost.erb
+++ b/views/newpost.erb
@@ -4,18 +4,18 @@
 
 <form method='post' action='/create_blog'>
 	<div id='title-box'>
-		<div id='post-title'>
+		<div id='new-post-title'>
 		Title
 		</div>
-	<input type='text' name='title' id='post-content'>
+	<input type='text' name='title' id='new-title' autocomplete="off">
 	<div id='post-title'>
 	Content
 	</div>
 	<div id='content-box'>
-	<textarea type='text' name='content' id='new-content-box'></textarea>
+	<textarea type='text' name='content' id='new-content-box' autocomplete="off"></textarea>
 	</div>
 	</div>
-	<input type='submit' id='edit-submit'>
+	<input type='submit' id='new-submit'>
 </form>
 </div>
 
